# battle_sw

./: CMakeLists.txt  README.md
src/: GameRuntime.cpp  GameRuntime.hpp  main.cpp
src/Core/: BaseTypes.hpp  BhvAction.cpp  BhvAction.hpp  ComponentHandler.hpp  DamageEffect.cpp  DamageEffect.hpp  DefaultTurnBehavior.cpp  DefaultTurnBehavior.hpp  Entity.hpp  EntityHandle.cpp  EntityHandle.hpp  EntiyBuilder.cpp  EntiyBuilder.hpp  EventBus.hpp  FightMeleeComponent.cpp  FightMeleeComponent.hpp  FightService.cpp  FightService.hpp  HealthService.cpp  HealthService.hpp  IBaseComponent.cpp  IBaseComponent.hpp  IFightComponent.hpp  IGameService.hpp  INavigationService.hpp  IRangeModifierVisitor.cpp  IRangeModifierVisitor.hpp  ITargetSelectorStrategy.hpp  ITurnBehaviour.hpp  MovementComponent.cpp  MovementComponent.hpp  NavigationTask.hpp  OccupancyComponent.cpp  OccupancyComponent.hpp  RangeFightComponent.cpp  RangeFightComponent.hpp  World.cpp  World.hpp
src/Core/AI/: DefaultTurnBehavior.cpp  DefaultTurnBehavior.hpp  ITurnBehaviour.hpp
src/Core/DataComponents/: HealthComponent.hpp  IDataComponent.cpp  IDataComponent.hpp  MeleeAttackData.hpp  MovementData.hpp  RangeAttackData.hpp
src/Core/Entity/: Entity.cpp  Entity.hpp  EntityHandle.cpp  EntityHandle.hpp
src/Core/Factory/: EntityFactory.cpp  EntityFactory.hpp  UnitParams.hpp  (+2 more)
src/Features/: HunterFactory.cpp  HunterFactory.hpp  HunterTurnBehavior.cpp  HunterTurnBehavior.hpp  SwordsmanFactory.cpp  SwordsmanFactory.hpp  SwordsmanTurnBehavior.cpp  SwordsmanTurnBehavior.hpp
src/Game/: GameRuntime.cpp  GameRuntime.hpp
(+54 files in other folders)
